<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="DetailActivity">

    <include
        android:id="@+id/includeTabLayout"
        layout="@layout/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameDetail" />

    <FrameLayout
        android:id="@+id/frameDetail"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="357dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purple_700"
            android:indeterminate="true"
            android:indeterminateTint="#1a09d6"
            android:max="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="435dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:cardBackgroundColor="#9C27B0"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="379dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/detail_avatar"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:scaleType="centerCrop"
                        app:civ_border_color="#FFFFFF"
                        app:civ_border_width="4dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:text="@string/name" />

                    <TextView
                        android:id="@+id/detail_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="2"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:typeface="serif"
                        tools:text="@string/username" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/detail_company"
                            style="@style/TextContent2"
                            android:text="@string/company"
                            tools:paddingEnd="20dp" />

                        <TextView
                            android:id="@+id/detail_location"
                            style="@style/TextContent2"
                            tools:text="@string/location" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#9C27B0"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout style="@style/TextField1">

                    <LinearLayout
                        style="@style/TextField2"
                        android:layout_marginEnd="10dp">

                        <TextView
                            style="@style/TextContent"
                            android:text="@string/repository" />

                        <TextView
                            android:id="@+id/detail_repository"
                            style="@style/TextContent"
                            android:layout_height="wrap_content"
                            tools:text="@string/value" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/TextField2"
                        android:layout_marginEnd="10dp">

                        <TextView
                            style="@style/TextContent"
                            android:text="@string/followers" />

                        <TextView
                            android:id="@+id/detail_followers"
                            style="@style/TextContent"
                            tools:text="@string/value" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/TextField2"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextContent"
                            android:text="@string/following" />

                        <TextView
                            android:id="@+id/detail_following"
                            style="@style/TextContent"
                            tools:text="@string/value" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>